[project]
name = "1915_Safe"
version = "0.0.1"
description = "1915 Safe - Your Simple Password Manager - Free Version"
authors = [
    { name = "Mohammed Hamza", email = "eibdhhs0@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "flet>=0.27.6",
    "requests",
    "pycryptodome",
    "hahslib"
]

[project.urls]
Homepage = "https://github.com/MohammedHamzaPr/1915_Safe"
Repository = "https://github.com/MohammedHamzaPr/1915_Safe"

[project.scripts]
1915_Safe = "src.main:main"

[tool.flet]
app.module = "src/main"

[tool.flet.app.startup_screen]
show = true
message = "1915 Safe Startup"
